# ActionNetwork-Voter-Data-Matching

./: download_action_network_contacts.py  download_solidarity_tech_contacts.py  pyproject.toml  voter_data_matching.py  voterdatamatching.py  voterdatamatching1.py  voterdatamatching2.py  voterdatamatching3.py  write_voter_file_to_parquet.py
